{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 322,
  "lineage": "0b32bdc7-dd0c-8636-8982-cd8410917477",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:402072331520:vpc/vpc-e67ed49e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-4ad29320",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-f5288b8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-e67ed49e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b49c0bcf",
            "owner_id": "402072331520",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lambda-coin",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2e3e63c545211e2",
            "arn": "arn:aws:ec2:us-west-2:402072331520:instance/i-0d38dad75a9dee0d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d38dad75a9dee0d2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05158edefa0d6717a",
            "private_dns": "ip-172-31-2-102.us-west-2.compute.internal",
            "private_ip": "172.31.2.102",
            "public_dns": "ec2-52-11-228-142.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.228.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07a556d7189e8fc79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "coin-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ed998fb7",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e098aee28adf1ab2"
            ]
          },
          "dependencies": [
            "aws_security_group.coin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "coin",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:402072331520:security-group/sg-0e098aee28adf1ab2",
            "description": "AWS Batch Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0e098aee28adf1ab2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8332,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8332
              }
            ],
            "name": "coin-security-group",
            "name_prefix": null,
            "owner_id": "402072331520",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-e67ed49e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rumble-batch",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:402072331520:security-group/sg-08a7982d1b6aae21d",
            "description": "AWS Batch Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-08a7982d1b6aae21d",
            "ingress": [],
            "name": "aws-batch-rumble-security-group",
            "name_prefix": null,
            "owner_id": "402072331520",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-e67ed49e"
          }
        }
      ]
    }
  ]
}